# raytracingGRFF

./: .gitignore  README.md  bench_raytrace.py  build_rays.py  gpu_raytrace.py  plot_model.py  pyproject.toml  ray_tracing_demo.ipynb  resample_with_ray_tracing.py  resampling_MAS.py  synthetic_FF.py  synthetic_FF_multi_thread.py  z_grid.ipynb
raytracingGRFF/: __init__.py  build_rays.py  gpu_raytrace.py  util.py
script/: compare_s_input.py  resample_with_ray_tracing.py  synthetic_FF_map_single_thread.py
script/pub/: cross_section_plots.ipynb  plot_SDO_context.py  plot_model_z0_slices.py
tests/: test_gpu_raytrace.py
