[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raytracingGRFF"
version = "0.1.0"
description = "Ray-tracing and LOS sampling utilities for GRFF radio synthesis"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GRFFradioSun contributors" }]
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["raytracingGRFF*"]
exclude = ["fastGRFF*", "tests*", "script*", "corona*"]
